starting edits on library.bib to address iss4, iss5, iss6, iss7

--- a/library.bib
+++ b/library.bib
@@ -900,14 +900,14 @@ journal = "JSM Proceedings, Government Statistics Section",
 }
 
 @Article{Ec2011,
-  author    = {(Ec), European Commission},
+  author    = {{European Commission}},
   title     = {{SPECIAL EUROBAROMETER 359 Attitudes on Data Protection and Electronic Identity in the European Union}},
   year      = {2011},
   pages     = {330},
   abstract  = {This report presents the results of the largest survey ever conducted regarding citizen's behaviours and attitudes concerning identity management, data protection and privacy.},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
-  url      = {http://ec.europa.eu/public_opinion/index_en.htm},
+  url       = {http://ec.europa.eu/public_opinion/index_en.htm},
 }
 
 @Article{Osterreicher2003,
@@ -932,8 +932,9 @@ journal = "JSM Proceedings, Government Statistics Section",
   journal       = {ArXiv e-prints},
   year          = {2016},
   archiveprefix = {arXiv},
+  doi           = {10.1145/2976749.2978318},
   eprint        = {1607.00133},
-  keywords      = {Statistics - Machine Learning, Computer Science - Cryptography and Security, Computer Science - Learning},
+  keywords      = {Statistics - Machine Learning, Computer Science - Cryptography and Security, Computer Science - Learning, Formal Privacy},
   owner         = {vilhuber},
   primaryclass  = {stat.ML},
   timestamp     = {2016.08.30},
@@ -4512,24 +4513,27 @@ Book: The rapid growth of electronic commerce, along with changes in information
 }
 
 @Article{Abowd:JPC:2017,
-	Title                    = {How Will Statistical Agencies Operate When All Data Are Private?},
-	Author                   = {John M. Abowd},
-	Journal                  = {Journal of Privacy and Confidentiality},
-	Year                     = {2017},
-	Number                   = {3},
-	Volume                   = {7},
-
-	url                      = {http://repository.cmu.edu/jpc/vol7/iss3/1}
+  author  = {John M. Abowd},
+  title   = {How Will Statistical Agencies Operate When All Data Are Private?},
+  journal = {Journal of Privacy and Confidentiality},
+  year    = {2017},
+  volume  = {7},
+  number  = {3},
+  note    = {Published version of Abowd:LDI:2016:30},
+  doi     = {10.29012/jpc.v7i3.404},
+  url     = {http://repository.cmu.edu/jpc/vol7/iss3/1},
 }
 
-@techreport{Abowd:LDI:2016:30,
-	Title                    = {How Will Statistical Agencies Operate When All Data Are Private?},
-	Author                   = {John M. Abowd},
-	institution   = {Labor Dynamics Institute, Cornell University},
-    type          = {Document},
-  	year          = {2016},
-	number        = {30},
-	url          = {http://digitalcommons.ilr.cornell.edu/ldi/30/},
+@TechReport{Abowd:LDI:2016:30,
+  author      = {John M. Abowd},
+  title       = {How Will Statistical Agencies Operate When All Data Are Private?},
+  institution = {Labor Dynamics Institute, Cornell University},
+  year        = {2016},
+  type        = {Document},
+  number      = {30},
+  note        = {pre-print version of Abowd:JPC:2017},
+  doi         = {10.29012/jpc.v7i3.404},
+  url         = {http://digitalcommons.ilr.cornell.edu/ldi/30/},
 }
 
 @Misc{RepArchive:abowd:schmutte:BPEA:2015,
