experimenting with keywords

--- a/library.bib
+++ b/library.bib
@@ -4533,6 +4533,7 @@ Book: The rapid growth of electronic commerce, along with changes in information
   number      = {30},
   note        = {pre-print version of Abowd:JPC:2017},
   doi         = {10.29012/jpc.v7i3.404},
+  keywords    = {Official Statistics; Economics of Privacy},
   url         = {http://digitalcommons.ilr.cornell.edu/ldi/30/},
 }
 
