experiments with keywords

--- a/library.bib
+++ b/library.bib
@@ -5629,13 +5629,14 @@ month={7},
 }
 
 @Article{abowd:fcsm:2016,
-  author    = {Abowd, John M.},
-  title     = {Why Statistical Agencies Need to Take Privacy-loss Budgets Seriously, and What It Means When They Do},
-  journal = {The 13th Biennial Federal Committee on Statistical Methodology (FCSM) Policy Conference},
-  year      = {2016},
-  month     = 12,
-  note      = {\url{https://digitalcommons.ilr.cornell.edu/ldi/32/}},
-  url       = {https://digitalcommons.ilr.cornell.edu/ldi/32/},
+  author   = {Abowd, John M.},
+  title    = {Why Statistical Agencies Need to Take Privacy-loss Budgets Seriously, and What It Means When They Do},
+  journal  = {The 13th Biennial Federal Committee on Statistical Methodology (FCSM) Policy Conference},
+  year     = {2016},
+  month    = {12},
+  note     = {\url{https://digitalcommons.ilr.cornell.edu/ldi/32/}},
+  keywords = {Policy Documents; Economics of Privacy; Official Statistics},
+  url      = {https://digitalcommons.ilr.cornell.edu/ldi/32/},
 }
 
 
