--- a/library.bib
+++ b/library.bib
@@ -5746,4 +5746,18 @@ month={7},
   url     = {https://www.oecd-ilibrary.org/content/publication/9789264229358-en},
 }
 
+@Article{SWEENEY2002,
+  author    = {Latanya Sweeney},
+  title     = {K-anonymity: A Model for Protecting Privacy},
+  journal   = {International Journal of Uncertainty, Fuzziness and Knowledge-Based Systems},
+  year      = {2002},
+  volume    = {10},
+  number    = {05},
+  pages     = {557--570},
+  month     = {oct},
+  doi       = {10.1142/s0218488502001648},
+  owner     = {vilhuber},
+  timestamp = {2019.01.14},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
