Added Wood et al Primer final version

--- a/library.bib
+++ b/library.bib
@@ -4661,6 +4661,14 @@ Book: The rapid growth of electronic commerce, along with changes in information
   institution = {a product of the "Bridging Privacy Definitions" working group, part of the Privacy Tools for Sharing Research Data project at Harvard University},
 }
 
+@article {wood:etal:JET:2018,
+  title = {Differential Privacy: A Primer for a Non-Technical Audience},
+  journal = {Vanderbilt Journal of Entertainment and Technology Law},
+  year = {2018},
+  volume = {21},
+  number = {1},
+  author = {Wood, Alexandra and Altman, Micah and Bembenek, Aaron and  Bun, Mark and Gaboardi, Marco and Honaker, James and Nissim, Kobbi and O{\textquoteright}Brien, David R. and Steinke, Thomas and Vadhan, Salil},
+}
 @PhdThesis{machanavajjhala:thesis:2008,
   author = {Ashwin Kumar V. Machanavajjhala},
   title  = {{Defining and Enforcing Privacy in Data Sharing}},
