--- a/library.bib
+++ b/library.bib
@@ -5699,7 +5699,7 @@ month={7},
   institution = {U.S. Census Bureau, Center for Economic Studies},
   year        = {2016},
   type        = {Working Papers},
-  abstract    = {Manufacturing in America has become significantly more data-intensive. We investigate the adoption, performance effects and organizational complementarities of data-driven decision making (DDD) in the U.S. Using data collected by the Census Bureau for 2005 and 2010, we observe the extent to which manufacturing firms track and use data to guide decision making, as well as their investments in information technology (IT) and the use of other structured management practices. Examining a representative sample of over 18,000 plans, we find that adoption of DDD is earlier and more prevalent among larger, older plants belonging to multi-unit firms. Smaller single-establishment firms adopt later but have a higher correlation with performance than similar non-adopters. Using a fixed-effects estimator, we find the average value-added for later DDD adopters to be 3% greater than non-adopters, controlling for other inputs to production. This effect is distinct from that associated with IT and other structured management practices and is concentrated among single-unit firms. Performance improves after plants adopt DDD, but not before ? consistent with a causal relationship. However, DDD-related performance differentials decrease over time for early and late adopters, consistent with firm learning and development of organizational complementarities. Formal complementarity tests suggest that DDD and high levels of IT capital reinforce each other, as do DDD and skilled workers. For some industries, the benefits of DDD adoption appear to be greater for plants that delegate some decision making to frontline workers.},
+  abstract    = {Manufacturing in America has become significantly more data-intensive. We investigate the adoption, performance effects and organizational complementarities of data-driven decision making (DDD) in the U.S. Using data collected by the Census Bureau for 2005 and 2010, we observe the extent to which manufacturing firms track and use data to guide decision making, as well as their investments in information technology (IT) and the use of other structured management practices. Examining a representative sample of over 18,000 plans, we find that adoption of DDD is earlier and more prevalent among larger, older plants belonging to multi-unit firms. Smaller single-establishment firms adopt later but have a higher correlation with performance than similar non-adopters. Using a fixed-effects estimator, we find the average value-added for later DDD adopters to be 3\% greater than non-adopters, controlling for other inputs to production. This effect is distinct from that associated with IT and other structured management practices and is concentrated among single-unit firms. Performance improves after plants adopt DDD, but not before ? consistent with a causal relationship. However, DDD-related performance differentials decrease over time for early and late adopters, consistent with firm learning and development of organizational complementarities. Formal complementarity tests suggest that DDD and high levels of IT capital reinforce each other, as do DDD and skilled workers. For some industries, the benefits of DDD adoption appear to be greater for plants that delegate some decision making to frontline workers.},
   url         = {https://EconPapers.repec.org/RePEc:cen:wpaper:16-06},
 }
 
