fixing biber functionality at Amos Hall

--- a/sloan-privacy-bibliography.tex
+++ b/sloan-privacy-bibliography.tex
@@ -1,5 +1,6 @@
 % !TeX TXS-program:bibliography = txs:///biber
-% !TeX program = xelatex
+% !TEX program = xelatex
+% !BIB program = biblatex
 
 \documentclass[12pt,letterpaper]{article}
 % \usepackage[utf8]{inputenc}
