--- a/sloan-privacy-bibliography.tex
+++ b/sloan-privacy-bibliography.tex
@@ -52,7 +52,9 @@ pdfsubject={Bibliography},%
 
 This bibliography is generated for the Sloan project at Cornell University's Labor Dynamics Institute. It is a curated selection of privacy-related articles. Articles are in alphabetical order of the first author's last name.
 \nocite{*}
-\printbibliography[title={Articles}]
+% \printbibliography[title={Articles}]
+\printbibliography[title={Background},keyword={background}]
+% \printbibliography[title={Formal Privacy},keyword={formal privacy},notkeyword{background}]
 % \printbibliography[type=report,title={Preprints and Working papers}]
 % \printbibliography[nottype=report,nottype=article,title={Other publications}]
 
