additions to bib file

--- a/library.bib
+++ b/library.bib
@@ -446,6 +446,7 @@ eprint = {
   pages     = {417-429},
   issn      = {0361915X},
   abstract  = {This paper deals with market problems that arise when a monopoly sets some aspect of product quality as well as price. It is argued that the market failure is associated with the inability of prices to convey information about the value attached to quality by inframarginal consumers. In the regulatory context, this market problem appears in the form of a difficult informational question for the regulator; what is the average valuation of quality over all the consumers in the market? The paper suggests that rate-of-return regulation may have attractive features when quality is a variable.},
+  keywords  = {data unions},
   publisher = {[RAND Corporation, Wiley]},
   url       = {http://www.jstor.org/stable/3003237},
 }
@@ -686,7 +687,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   abstract = { Abstract Commonly accepted hypotheses guide practical determination of needed data quality; for example, as the probability that a decision uses data increases, the needed data quality increases, and the more rudimentary the uses of the data, the less data quality is needed. These hypotheses are formally defined and analyzed in some decision-theoretic models. Conditions under which the hypotheses hold and fail are examined. Particular attention is given to determining needed data quality when the users of the data behave nonoptimally. },
   doi      = {10.1080/01621459.1985.10478155},
   eprint   = {http://www.tandfonline.com/doi/pdf/10.1080/01621459.1985.10478155},
-  keywords = {value of data},
+  keywords = {value of data, data unions},
   url      = {
         http://www.tandfonline.com/doi/abs/10.1080/01621459.1985.10478155
 
@@ -3947,7 +3948,7 @@ instead of a hierarchy.},
   abstract  = {I investigate consumer privacy and the market for customer information in electronic retailing. The value of customer information derives from the ability of Internet firms to identify individual consumers and charge them personalized prices. I study two settings, a confidential regime in which the sale of customer information is not possible, and a disclosure regime in which one firm may compile and sell a customer list to another firm that uses it to price discriminate. Welfare comparisons depend critically on whether consumers anticipate sale of the list and on demand elasticity.},
   copyright = {Copyright 2004 RAND Corporation},
   doi       = {10.2307/1593765},
-  keywords  = {value of data},
+  keywords  = {value of data, data unions},
   language  = {English},
   owner     = {vilhuber},
   publisher = {Wiley on behalf of RAND Corporation},
