more additions to bib

--- a/library.bib
+++ b/library.bib
@@ -3948,7 +3948,7 @@ instead of a hierarchy.},
   abstract  = {I investigate consumer privacy and the market for customer information in electronic retailing. The value of customer information derives from the ability of Internet firms to identify individual consumers and charge them personalized prices. I study two settings, a confidential regime in which the sale of customer information is not possible, and a disclosure regime in which one firm may compile and sell a customer list to another firm that uses it to price discriminate. Welfare comparisons depend critically on whether consumers anticipate sale of the list and on demand elasticity.},
   copyright = {Copyright 2004 RAND Corporation},
   doi       = {10.2307/1593765},
-  keywords  = {value of data, data unions},
+  keywords  = {value of data, data union},
   language  = {English},
   owner     = {vilhuber},
   publisher = {Wiley on behalf of RAND Corporation},
@@ -5798,6 +5798,166 @@ Book: The rapid growth of electronic commerce, along with changes in information
   pages    = {171-202},
   abstract = {Statistical agencies face a dual mandate to publish accurate statistics while protecting respondent privacy. Increasing privacy protection requires decreased accuracy. Recognizing this as a resource allocation problem, we propose an economic solution: operate where the marginal cost of increasing privacy equals the marginal benefit. Our model of production, from computer science, assumes data are published using an efficient differentially private algorithm. Optimal choice weighs the demand for accurate statistics against the demand for privacy. Examples from U.S.\ statistical programs show how our framework can guide decision-making. Further progress requires a better understanding of willingness-to-pay for privacy and statistical accuracy.},
   keywords = {Economics of Privacy, Formal Privacy, Statistical Disclosure Limitation},
+}
+
+@TechReport{Andrews:Inference:2018,
+  author      = {Isaiah Andrews and Toru Kitagawa and Adam McCloskey},
+  title       = {Inference on winners},
+  institution = {Institute for Fiscal Studies},
+  year        = {2018},
+  file        = {:E\:\\Dropbox\\DataUnions\\literature\\CWP311818.pdf:PDF},
+}
+
+@TechReport{Bergemann:MarketsForInfo:2018,
+  author      = {Dick Bergemann and Alessandro Bonatti},
+  title       = {Markets for Information: An Introduction},
+  institution = {Cowles Foundation},
+  year        = {2018},
+  type        = {Cowles Foundation Discussion Paper},
+  number      = {2142},
+  month       = aug,
+  file        = {:E\:\\Dropbox\\DataUnions\\literature\\BergemannMorris_MarketsforInfo_2018.pdf:PDF},
+  keywords    = {value of data, data unions},
+}
+
+@Article{Craft:ValueofWeatherData:1998,
+  author   = {Craft, Erik D},
+  title    = {The Value of Weather Information Services for Nineteenth-Century Great Lakes Shipping},
+  journal  = {American Economic Review},
+  year     = {1998},
+  volume   = {88},
+  number   = {5},
+  pages    = {1059-76},
+  abstract = {The U.S. government established a national weather organization in 1870. Changes in Great Lakes cargo and hull losses, and shipping rates from Chicago to Buffalo, provide evidence of the value of storm warnings on the Great Lakes. Nearly half of the Great Lakes storm-warning stations were closed during the fall of 1883 because of appropriations reductions. This exogenous shock permits the econometric estimation of the value of storm-warning locations on the Great Lakes. The results indicate that the social rate of return for weather expenditures during the Weather Bureau's founding period was at least 60 percent. Copyright 1998 by American Economic Association.},
+  url      = {https://EconPapers.repec.org/RePEc:aea:aecrev:v:88:y:1998:i:5:p:1059-76},
+}
+
+@TechReport{FrankelQuantifyingInformationAndUncertainty2018,
+  author      = {Alexander Frankel and Emir Kamenica},
+  title       = {Quantifying information and uncertainty},
+  institution = {University of Chicago},
+  year        = {2018},
+  file        = {:E\:\\Dropbox\\DataUnions\\literature\\FrankelKamenica_QuantifyingInformation_WP_2018.pdf:PDF},
+  keywords    = {value of information, Bregman divergences, entropy, value of data, data unions},
+}
+
+@Article{GentzkowARothschildStiglitzApproachToBayesianPersuasion2016,
+  author    = {Matthew Gentzkow and Emir Kamenica},
+  title     = {A Rothschild-Stiglitz Approach to Bayesian Persuasion},
+  journal   = {American Economic Review},
+  year      = {2016},
+  volume    = {106},
+  number    = {5},
+  pages     = {597--601},
+  month     = {may},
+  doi       = {10.1257/aer.p20161049},
+  file      = {:E\:\\Dropbox\\DataUnions\\literature\\RSapproachBP.pdf:PDF},
+  keywords  = {value of data, data unions},
+  publisher = {American Economic Association},
+}
+
+@TechReport{SHORT-RUNNBERWORKINGPAPERSERIES2018,
+  author      = {Jian Jia and Ginger Zhe Lin and Liad Wagman},
+  title       = {THE SHORT-RUN EFFECTS OF GDPR ON TECHNOLOGY VENTURE INVESTMENT},
+  institution = {NBER},
+  year        = {2018},
+  number      = {25248},
+  file        = {:E\:\\Dropbox\\DataUnions\\literature\\w25248.pdf:PDF},
+  keywords    = {economics of privacy},
+}
+
+@Article{KamenicaBayesianPersuasion2011,
+  author    = {Emir Kamenica and Matthew Gentzkow},
+  title     = {Bayesian Persuasion},
+  journal   = {American Economic Review},
+  year      = {2011},
+  volume    = {101},
+  number    = {6},
+  pages     = {2590--2615},
+  month     = {oct},
+  doi       = {10.1257/aer.101.6.2590},
+  file      = {:E\:\\Dropbox\\DataUnions\\literature\\bayesianPersuasion.pdf:PDF},
+  keywords  = {data unions, value of data},
+  publisher = {American Economic Association},
+}
+
+@TechReport{Kiefer:EffectivePrivacy:Census:2019,
+  author      = {Daniel Kiefer and Ashwin Machanavajjhala and Philip Leclerc and William Sexton and Robert Ashmead},
+  title       = {EFFECTIVE PRIVACY AFTER ADJUSTING FOR CONSTRAINTS, WITH APPLICATIONS TO THE 2020 CENSUS},
+  institution = {U.S. Census Bureau},
+  year        = {2019},
+  abstract    = {Differential privacy is a mathematical tool for protecting the confidentiality of records belong- T
+ing to individuals. One of the key premises of differential privacy is that any measurement based on theU
+confidential data must be altered with carefully chosen random noise before publication. However, theBde-
+ployment of differentially private disclosure limitation technologies by official statistical agencies maIy not
+always occur under ideal conditions. For instance, internal decisions or external requirements (e.g.,Rlegal or
+contractual obligations) may stipulate that certain statistics must be published exactly. AdditioTnally, over-
+lapping datasets may have already been published. In this paper, we explain (1) the semanticsSof algorithms
+that satisfy differential privacy, (2) how the semantics are affected by release of exact statiIstics (computed
+directly from the confidential data), (3) how to attribute responsibility for any resulting inDformation leakage,
+(4) how to provide privacy semantics for the combined information leakage.},
+  file        = {:E\:\\Dropbox\\DataUnions\\literature\\effective-privacy-adjusting_v4.0 (1).pdf:PDF},
+}
+
+@Article{LanierWeyl:Blueprint:HBR:2018,
+  author   = {Jaron Lanier and E. Glen Weyl},
+  title    = {A Blueprint for a Better Digital Society},
+  journal  = {Harvard Business Review},
+  year     = {2018},
+  file     = {:E\:\\Dropbox\\DataUnions\\literature\\Lanier_Surveillance_Reprint.pdf:PDF},
+  keywords = {data unions},
+}
+
+@TechReport{LigettAccuracyFirstSelectingADifferentialPrivacyLevelForAccuracyConstrainedERM1705,
+  author      = {Katrina Ligett and Seth Neel and Aaron Roth and Bo Waggoner and Z. Steven Wu},
+  title       = {Accuracy First: Selecting a Differential Privacy Level for Accuracy-Constrained ERM},
+  institution = {arXiv},
+  year        = {2017},
+  number      = {1705.10829v1},
+  month       = may,
+  file        = {:E\:\\Dropbox\\DataUnions\\literature\\AccuracyFirst2017.pdf:PDF},
+}
+
+@Article{MillerPrivacyProtectionPersonalizedMedicineAndGeneticTesting2018,
+  author    = {Amalia R. Miller and Catherine Tucker},
+  title     = {Privacy Protection, Personalized Medicine, and Genetic Testing},
+  journal   = {Management Science},
+  year      = {2018},
+  volume    = {64},
+  number    = {10},
+  pages     = {4648--4668},
+  month     = {oct},
+  doi       = {10.1287/mnsc.2017.2858},
+  file      = {:E\:\\Dropbox\\DataUnions\\literature\\MillerTuckerPrivacyTestingMS2017.pdf:PDF},
+  keywords  = {value of data},
+  publisher = {Institute for Operations Research and the Management Sciences ({INFORMS})},
+}
+
+@TechReport{NeelMitigating2018,
+  author      = {Seth Neel and Aaron Roth},
+  title       = {Mitigating Bias in Adaptive Data Gathering via Differential Privacy},
+  institution = {arXiv},
+  year        = {2018},
+  file        = {:E\:\\Dropbox\\DataUnions\\literature\\MitigatingBias2018.pdf:PDF},
+  keywords    = {data unions, formal privacy},
+}
+
+@Book{Nissenbaum:2009:PCT:1822585,
+  title     = {Privacy in Context: Technology, Policy, and the Integrity of Social Life},
+  publisher = {Stanford University Press},
+  year      = {2009},
+  author    = {Nissenbaum, Helen},
+  address   = {Stanford, CA, USA},
+  isbn      = {0804752370, 9780804752374},
+}
+
+@TechReport{PomattoTheCostOfInformation2018,
+  author      = {Luciano Pomatto and Philipp Strack and Omer Tamuz},
+  title       = {The Cost of Information},
+  institution = {arXiv},
+  year        = {2018},
+  file        = {:E\:\\Dropbox\\DataUnions\\literature\\Pomatto_CostofInformation_arXiv_2018.pdf:PDF},
+  keywords    = {value of data},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
