--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Introductory Readings in Formal Privacy for Economists (In Progress)"
-author: "John M. Abowd, Ian M. Schmutte, William Sexton, and Lars Vilhuber"
+author: "John M. Abowd, Ian M. Schmutte, and Lars Vilhuber"
 site: bookdown::bookdown_site
 documentclass: article
 output:
@@ -12,24 +12,34 @@ biblio-style: "authoryear"
 ---
 
 # Overview
-The purpose of this document is to encourage scholars to contribute to the economic analysis of formal privacy, and particularly its application to public statistics. Statistical agencies and tech giants are rapidly adopting formal privacy models make the tradeoff between privacy and data quality precise. The question then becomes, how much privacy loss should they allow? @AbowdSchmutte:Privacy:AER argue that this choice ultimately depends on how decision makers weigh the costs of privacy loss against the benefits of higher-quality data.
+The purpose of this document is to provide scholars with a comprehensive list of readings relevant to the economic analysis of formal privacy, and particularly its application to public statistics. 
+Statistical agencies and tech giants are rapidly adopting formal privacy models make the tradeoff between privacy and data quality precise. The question then becomes, how much privacy loss should they allow? @AbowdSchmutte:Privacy:AER argue that this choice ultimately depends on how decision makers weigh the costs of privacy loss against the benefits of higher-quality data. Making progress on these questions requires familiarity with new tools from computer science and statistics, the objectives and policy environment within which statistical agencies operate, along wtih the economic analysis of information. 
 
-Contributing to this discussion requires familiarity with no fewer than five distinct bodies of literature. First, it is necessary to understand what statistical agencies do and the laws, regulations, and institutions that govern them. Second, formal privacy models have emerged from the cryptography subfield of computer science. Third, a decades-long literature on statistical disclosure limitation provides the basis for most privacy controls currently in use. Fourth, a literature on the economics of privacy provides some insight into how firms and their consumers might trade in private data, primarily in contexts where firms want such data for marketing or other strategic purposes. 
+We have organized these references into a reading course focused on 10-15 primary references in each of six different topics:
+* Formal Privacy
+* Policy and Official Statistics
+* Statistical Disclosure Limitation
+* Economics of Privacy
+* Value of Privacy
+* Value of Data
 
-
-It is a truism that as more data become available, we see greater risks to privacy. In many contexts, institutions have some control over both the extent of privacy, and the amount of data available. Indeed, the Law of Information Recovery [@Dinur:2003:RIW:773153.773173] tells us, in a sense, that as we publish more data, we must necessarily lose privacy.
-
-
+In the remainder of this document, for each topic, we provide a very brief description of the papers in the reading course and why we selected them. In each case, we orient the reader to the key issues, concepts, and tools in each topic. In addition to the reading course, we have also curated a much more extensive list of references, available here [link].
 
 # Background
+To begin, we have curated a short list of background references that frame a particular set of research topics. @AbowdSchmutte:Privacy:AER show how to combine formal privacy models with the classic theory of public goods to understand and guide decisions about privacy protection and data dissemination. For the neophyte, @Nissim:DPNonTech:WP:2018 provide a non-technical introduction to formal privacy models in general, and differential privacy in particular.  @Heffetz2014 also introduce differential privacy, but targeted toward economists. After reading these introductory treatments, you should review the textbook treatment of differential privacy in @Dwork:Roth:journal:version:2014, focusing on Chapters 1--3.
+
+
+
+
+
 @title13
 @cipsea
-@AbowdSchmutte:Privacy:AER
-@Dwork:Roth:journal:version:2014
+
+
 @Harvard:DataPrivacyLab
-@Heffetz2014
+
 @jones:2017
-@Nissim:DPNonTech:WP:2018
+
 
 # Formal Privacy
 
