--- a/library.bib
+++ b/library.bib
@@ -1,5 +1,23 @@
 % Encoding: ISO-8859-1
 
+@inproceedings{Kifer:2010:TAS:1807085.1807106,
+ author = {Kifer, Daniel and Lin, Bing-Rong},
+ title = {Towards an Axiomatization of Statistical Privacy and Utility},
+ booktitle = {Proceedings of the Twenty-ninth ACM SIGMOD-SIGACT-SIGART Symposium on Principles of Database Systems},
+ series = {PODS '10},
+ year = {2010},
+ isbn = {978-1-4503-0033-9},
+ location = {Indianapolis, Indiana, USA},
+ pages = {147--158},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1807085.1807106},
+ doi = {10.1145/1807085.1807106},
+ acmid = {1807106},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {axioms, privacy, utility, value of privacy, data unions},
+} 
+
 @Book{GolubVanLoan:MatrixComputations:1996,
   title     = {Matrix Computations, Third Edition},
   publisher = {The Johns Hopkins University Press},
